Se creo un programaa en java en el cual se conecta a una base de datos

--- a/ProyectoU3/nbproject/project.properties
+++ b/ProyectoU3/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectou3.ProyectoU3
+main.class=proyectou3.frmInicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
